dart/vendor/sweph/native/sweph/src/swephexp.h


ext_def(int32) swe_helio_cross(int32 ipl, double x2cross, double jd_et, int32 iflag, int32 dir, double *jd_cross, char *serr);

ext_def(int32) swe_helio_cross_ut(int32 ipl, double x2cross, double jd_ut, int32 iflag, int32 dir, double *jd_cross, char *serr);


/* fixed stars */
ext_def( int32 ) swe_fixstar(
        char *star, double tjd, int32 iflag,
        double *xx,
        char *serr);


ext_def(int32) swe_fixstar_ut(char *star, double tjd_ut, int32 iflag,
	double *xx, char *serr);


ext_def(int32) swe_fixstar_mag(char *star, double *mag, char *serr);


ext_def( int32 ) swe_fixstar2(
        char *star, double tjd, int32 iflag,
        double *xx,
        char *serr);


ext_def(int32) swe_fixstar2_ut(char *star, double tjd_ut, int32 iflag,
	double *xx, char *serr);


ext_def(int32) swe_fixstar2_mag(char *star, double *mag, char *serr);


/* close Swiss Ephemeris */
ext_def( void ) swe_close(void);


/* set directory path of ephemeris files */
ext_def( void ) swe_set_ephe_path(const char *path);


/* set file name of JPL file */
ext_def( void ) swe_set_jpl_file(const char *fname);


/* get planet name */
ext_def( char *) swe_get_planet_name(int ipl, char *spname);


/* set geographic position of observer */
ext_def (void) swe_set_topo(double geolon, double geolat, double geoalt);


/* set sidereal mode */
ext_def(void) swe_set_sid_mode(int32 sid_mode, double t0, double ayan_t0);


/* get ayanamsa */
ext_def(int32) swe_get_ayanamsa_ex(double tjd_et, int32 iflag, double *daya, char *serr);

ext_def(int32) swe_get_ayanamsa_ex_ut(double tjd_ut, int32 iflag, double *daya, char *serr);

ext_def(double) swe_get_ayanamsa(double tjd_et);

ext_def(double) swe_get_ayanamsa_ut(double tjd_ut);



ext_def(const char *) swe_get_ayanamsa_name(int32 isidmode);

ext_def(const char *) swe_get_current_file_data(int ifno, double *tfstart, double *tfend, int *denum);


/*ext_def(void) swe_set_timeout(int32 tsec);*/

/****************************
 * exports from swedate.c
 ****************************/

ext_def( int ) swe_date_conversion(
        int y , int m , int d ,         /* year, month, day */
        double utime,   /* universal time in hours (decimal) */
        char c,         /* calendar g[regorian]|j[ulian] */
        double *tjd);