dart/vendor/sweph/lib/src/bindings.dart


  late final _swe_helio_crossPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              int32,
              ffi.Double,
              ffi.Double,
              int32,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_helio_cross');
  late final _swe_helio_cross = _swe_helio_crossPtr.asFunction<
      int Function(int, double, double, int, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_helio_cross_ut(
    int ipl,
    double x2cross,
    double jd_ut,
    int iflag,
    int dir,
    ffi.Pointer<ffi.Double> jd_cross,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_helio_cross_ut(
      ipl,
      x2cross,
      jd_ut,
      iflag,
      dir,
      jd_cross,
      serr,
    );
  }

  late final _swe_helio_cross_utPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              int32,
              ffi.Double,
              ffi.Double,
              int32,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_helio_cross_ut');
  late final _swe_helio_cross_ut = _swe_helio_cross_utPtr.asFunction<
      int Function(int, double, double, int, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  /// fixed stars
  int swe_fixstar(
    ffi.Pointer<ffi.Uint8> star,
    double tjd,
    int iflag,
    ffi.Pointer<ffi.Double> xx,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_fixstar(
      star,
      tjd,
      iflag,
      xx,
      serr,
    );
  }

  late final _swe_fixstarPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Pointer<ffi.Uint8>, ffi.Double, int32,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>>('swe_fixstar');
  late final _swe_fixstar = _swe_fixstarPtr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_fixstar_ut(
    ffi.Pointer<ffi.Uint8> star,
    double tjd_ut,
    int iflag,
    ffi.Pointer<ffi.Double> xx,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_fixstar_ut(
      star,
      tjd_ut,
      iflag,
      xx,
      serr,
    );
  }

  late final _swe_fixstar_utPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_fixstar_ut');
  late final _swe_fixstar_ut = _swe_fixstar_utPtr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_fixstar_mag(
    ffi.Pointer<ffi.Uint8> star,
    ffi.Pointer<ffi.Double> mag,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_fixstar_mag(
      star,
      mag,
      serr,
    );
  }

  late final _swe_fixstar_magPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_fixstar_mag');
  late final _swe_fixstar_mag = _swe_fixstar_magPtr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_fixstar2(
    ffi.Pointer<ffi.Uint8> star,
    double tjd,
    int iflag,
    ffi.Pointer<ffi.Double> xx,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_fixstar2(
      star,
      tjd,
      iflag,
      xx,
      serr,
    );
  }

  late final _swe_fixstar2Ptr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_fixstar2');
  late final _swe_fixstar2 = _swe_fixstar2Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_fixstar2_ut(
    ffi.Pointer<ffi.Uint8> star,
    double tjd_ut,
    int iflag,
    ffi.Pointer<ffi.Double> xx,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_fixstar2_ut(
      star,
      tjd_ut,
      iflag,
      xx,
      serr,
    );
  }

  late final _swe_fixstar2_utPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_fixstar2_ut');
  late final _swe_fixstar2_ut = _swe_fixstar2_utPtr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_fixstar2_mag(
    ffi.Pointer<ffi.Uint8> star,
    ffi.Pointer<ffi.Double> mag,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_fixstar2_mag(
      star,
      mag,
      serr,
    );
  }

  late final _swe_fixstar2_magPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_fixstar2_mag');
  late final _swe_fixstar2_mag = _swe_fixstar2_magPtr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  /// close Swiss Ephemeris
  void swe_close() {
    return _swe_close();
  }

  late final _swe_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('swe_close');
  late final _swe_close = _swe_closePtr.asFunction<void Function()>();

  /// set directory path of ephemeris files
  void swe_set_ephe_path(
    ffi.Pointer<ffi.Uint8> path,
  ) {
    return _swe_set_ephe_path(
      path,
    );
  }

  late final _swe_set_ephe_pathPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
          'swe_set_ephe_path');
  late final _swe_set_ephe_path =
      _swe_set_ephe_pathPtr.asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();

  /// set file name of JPL file
  void swe_set_jpl_file(
    ffi.Pointer<ffi.Uint8> fname,
  ) {
    return _swe_set_jpl_file(
      fname,
    );
  }

  late final _swe_set_jpl_filePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
          'swe_set_jpl_file');
  late final _swe_set_jpl_file =
      _swe_set_jpl_filePtr.asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();

  /// get planet name
  ffi.Pointer<ffi.Uint8> swe_get_planet_name(
    int ipl,
    ffi.Pointer<ffi.Uint8> spname,
  ) {
    return _swe_get_planet_name(
      ipl,
      spname,
    );
  }

  late final _swe_get_planet_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Int32, ffi.Pointer<ffi.Uint8>)>>('swe_get_planet_name');
  late final _swe_get_planet_name = _swe_get_planet_namePtr.asFunction<
      ffi.Pointer<ffi.Uint8> Function(int, ffi.Pointer<ffi.Uint8>)>();

  /// set geographic position of observer
  void swe_set_topo(
    double geolon,
    double geolat,
    double geoalt,
  ) {
    return _swe_set_topo(
      geolon,
      geolat,
      geoalt,
    );
  }

  late final _swe_set_topoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double, ffi.Double, ffi.Double)>>('swe_set_topo');
  late final _swe_set_topo =
      _swe_set_topoPtr.asFunction<void Function(double, double, double)>();

  /// set sidereal mode
  void swe_set_sid_mode(
    int sid_mode,
    double t0,
    double ayan_t0,
  ) {
    return _swe_set_sid_mode(
      sid_mode,
      t0,
      ayan_t0,
    );
  }

  late final _swe_set_sid_modePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(int32, ffi.Double, ffi.Double)>>(
      'swe_set_sid_mode');
  late final _swe_set_sid_mode =
      _swe_set_sid_modePtr.asFunction<void Function(int, double, double)>();

  /// get ayanamsa
  int swe_get_ayanamsa_ex(
    double tjd_et,
    int iflag,
    ffi.Pointer<ffi.Double> daya,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_get_ayanamsa_ex(
      tjd_et,
      iflag,
      daya,
      serr,
    );
  }

  late final _swe_get_ayanamsa_exPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Double, int32, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_get_ayanamsa_ex');
  late final _swe_get_ayanamsa_ex = _swe_get_ayanamsa_exPtr.asFunction<
      int Function(
          double, int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  int swe_get_ayanamsa_ex_ut(
    double tjd_ut,
    int iflag,
    ffi.Pointer<ffi.Double> daya,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_get_ayanamsa_ex_ut(
      tjd_ut,
      iflag,
      daya,
      serr,
    );
  }

  late final _swe_get_ayanamsa_ex_utPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Double, int32, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_get_ayanamsa_ex_ut');
  late final _swe_get_ayanamsa_ex_ut = _swe_get_ayanamsa_ex_utPtr.asFunction<
      int Function(
          double, int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  double swe_get_ayanamsa(
    double tjd_et,
  ) {
    return _swe_get_ayanamsa(
      tjd_et,
    );
  }

  late final _swe_get_ayanamsaPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'swe_get_ayanamsa');
  late final _swe_get_ayanamsa =
      _swe_get_ayanamsaPtr.asFunction<double Function(double)>();

  double swe_get_ayanamsa_ut(
    double tjd_ut,
  ) {
    return _swe_get_ayanamsa_ut(
      tjd_ut,
    );
  }

  late final _swe_get_ayanamsa_utPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'swe_get_ayanamsa_ut');
  late final _swe_get_ayanamsa_ut =
      _swe_get_ayanamsa_utPtr.asFunction<double Function(double)>();

  ffi.Pointer<ffi.Uint8> swe_get_ayanamsa_name(
    int isidmode,
  ) {
    return _swe_get_ayanamsa_name(
      isidmode,
    );
  }

  late final _swe_get_ayanamsa_namePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint8> Function(int32)>>(
          'swe_get_ayanamsa_name');
  late final _swe_get_ayanamsa_name = _swe_get_ayanamsa_namePtr
      .asFunction<ffi.Pointer<ffi.Uint8> Function(int)>();

  ffi.Pointer<ffi.Uint8> swe_get_current_file_data(
    int ifno,
    ffi.Pointer<ffi.Double> tfstart,
    ffi.Pointer<ffi.Double> tfend,
    ffi.Pointer<ffi.Int32> denum,
  ) {
    return _swe_get_current_file_data(
      ifno,
      tfstart,
      tfend,
      denum,
    );
  }

  late final _swe_get_current_file_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Int32>)>>('swe_get_current_file_data');
  late final _swe_get_current_file_data =
      _swe_get_current_file_dataPtr.asFunction<
          ffi.Pointer<ffi.Uint8> Function(int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Int32>)>();

  /// exports from swedate.c
  int swe_date_conversion(
    int y,
    int m,
    int d,
    double utime,
    int c,
    ffi.Pointer<ffi.Double> tjd,
  ) {
    return _swe_date_conversion(
      y,
      m,
      d,
      utime,
      c,
      tjd,
    );
  }
